--- a/_layouts/default-beta.html
+++ b/_layouts/default-beta.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'>
+  {% include meta.html %}
 
   <title>
     {% if page.title %}{{ page.title }} – {% endif %}{{ site.name }}
   </title>
-
-  <meta name="author" content="{{ site.name }}" />
-  <meta name="description" content="{{ site.description }}">
 
   <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
