--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'>
+    {% include meta.html %}
 
     <title>
       {% if page.title %}{{ page.title }} – {% endif %}{{ site.name }}
     </title>
-
-    <meta name="author" content="{{ site.name }}" />
-    <meta name="description" content="{{ site.description }}">
 
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -27,11 +22,11 @@
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/octicons/2.1.2/octicons.min.css" />
-    
+
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
-    
+
     <!-- http://realfavicongenerator.net/ -->
     <link rel="apple-touch-icon" sizes="57x57" href="{{ site.baseurl }}/images/logo/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="114x114" href="{{ site.baseurl }}/images/logo/apple-touch-icon-114x114.png">
@@ -53,7 +48,7 @@
     <meta name="msapplication-TileImage" content="{{ site.baseurl }}/images/logo/mstile-144x144.png">
     <meta name="msapplication-config" content="{{ site.baseurl }}/images/logo/browserconfig.xml">
     <meta name="application-name" content="elementary apps">
-    
+
   </head>
 
   <body>
@@ -61,12 +56,12 @@
       <div class="container">
         <header class="masthead clearfix">
           <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
-          
+
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <p class="site-description">{% if site.description_html %}{{ site.description_html }}{% else %}{{ site.description }}{% endif %}</p>
           </div>
-          
+
           <nav>
             <a href="{{ site.baseurl }}/">News</a>
             <a href="{{ site.baseurl }}/apps">Apps</a>
