--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,25 +7,25 @@ layout: default
 <article class="post">
 
   <header>
-    
+
     <h1 id="{{ post.title }}">{{ post.title }}</h1>
     {% if post.generic and title_obvious != true %}<p>{{ post.generic }}</p>{% endif %}
-    
+
   </header>
 
   <div class="entry">
-    
+
     {{ content }}
-    
+
   </div>
 
   <footer>
-  
+
     <div class="date">
       Updated on {{ post.date | date: "%e %B %Y" }}
-    </div>  
-    
-    
+    </div>
+
+
     {% if post.category %}
       {% for site_category in site.data.categories %}
         {% if site_category.slug == post.category %}
@@ -39,8 +39,8 @@ layout: default
       {% assign category_content = 'Posted in no particular category.' %}
     {% endif %}
 
-    <div>{{ category_content }}    
-    
+    <div>{{ category_content }}
+
     {% if post.tags.size > 0 %}
       {% capture tags_content %}Tagged with {% endcapture %}
       {% for post_tag in post.tags %}
@@ -51,16 +51,16 @@ layout: default
         {% endfor %}
         {% if tag %}
           {% capture tags_content_temp %}{{ tags_content }}<a href="{{ site.baseurl }}/tag/{{ tag.slug }}/">{{ tag.name }}</a>{% if forloop.last == false %}, {% endif %}{% endcapture %}
-          {% assign tags_content = tags_content_temp %}    
+          {% assign tags_content = tags_content_temp %}
         {% endif %}
       {% endfor %}
     {% else %}
       {% assign tags_content = '' %}
     {% endif %}
-    
+
     {{ tags_content }}</div>
-    
+
   </footer>
-  
-  {% include disqus.html disqus_identifier=post.disqus_identifier %}
+
+  {% include disqus.html %}
 </article>
