--- a/_includes/app_content.html
+++ b/_includes/app_content.html
@@ -1,41 +1,12 @@
-{% if post.screenshot %}
-  <h3 id="screenshots">Screenshots</h3>
-  <img src="{{ post.screenshot }}"/>
-{% endif %}
-
-{% if post.package %}
+{% if post.installation %}
   <h2 id="installation">Installation</h2>
-  {% if post.repository or post.repository-unstable %}
-    <p><b>Behold!</b> Third-party repositories are usually not verified by others. Follow these instructions at your own risk and only if you trust the owner of the repository / developer of the software.</p>
-  {% endif %}
-    {% if post.repository %}<pre><code>    sudo apt-add-repository {{ post.repository }}
-    sudo apt-get update
-    sudo apt-get install {{ post.package }}</code></pre>{% endif %}
-
-    {% if post.repository-unstable %}
-      <p>The following code adds an <b>unstable repository</b>, use with even higher caution as things might break. </p>
-    <pre><code>    sudo apt-add-repository {{ post.repository-unstable }}
-    sudo apt-get update
-    sudo apt-get install {{ post.package }}</code></pre>{% endif %}
-
-{% elseif post.installation %}
-  <h2 id="installation">Installation</h2>
-
-  {% foreach post.installation as dist %}
-
-  {% endforeach %}
-
-  {% if post.installation %}
-    <p><b>Behold!</b> Third-party repositories are usually not verified by others. Follow these instructions at your own risk and only if you trust the owner of the repository / developer of the software.</p>
-  {% endif %}
-    {% if post.repository %}<pre><code>    sudo apt-add-repository {{ post.repository }}
-    sudo apt-get update
-    sudo apt-get install {{ post.package }}</code></pre>{% endif %}
-
-    {% if post.repository-unstable %}
-      <p>The following code adds an <b>unstable repository</b>, use with even higher caution as things might break. </p>
-    <pre><code>    sudo apt-add-repository {{ post.repository-unstable }}
-    sudo apt-get update
-    sudo apt-get install {{ post.package }}</code></pre>{% endif %}
-
+  <p><b>Behold!</b> Third-party repositories are usually not verified by others. Follow these instructions at your own risk and only if you trust the owner of the repository / developer of the software.</p>
+  {% for dist in post.installation %}
+    <h3 id="installation-{{ dist.system }}">{{ dist.system }}</h3>
+    {% for repo in dist.info %}
+      <p>Add a {{ dist.type }} repository for {{ dist.system }} version {{ repo.version }} to install the software.</p>
+      <pre><code>    sudo apt-add-repository {{ repo.repository }} && sudo apt-get update
+    sudo apt-get install {{ repo.package }}</code></pre>
+    {% endfor %}
+  {% endfor %}
 {% endif %}
