Stopping the image nonsense

--- a/_includes/app_teaser.html
+++ b/_includes/app_teaser.html
@@ -1,7 +1,7 @@
 {% if post.screenshots %}
   <div id="screenshots">
     {% for screenshot in post.screenshots %}
-      <img src="{{ site.baseurl }}/images/screenshots/{{ screenshot }}" alt="Screenshot of {{ post.title }}" />
+      <img src="{{ site.baseurl }}/img/screenshots/{{ screenshot }}" alt="Screenshot of {{ post.title }}" />
     {% endfor %}
   </div>
   <p id="showcase" style="text-align:center">
