--- a/_includes/svg-icons.html
+++ b/_includes/svg-icons.html
@@ -1,11 +1,11 @@
-          {% if site.footer-links.dribbble %}<a href="http://dribbble.com/{{ site.footer-links.dribbble }}">{% include svg-icons/dribbble.html %}</a>{% endif %}
-          {% if site.footer-links.email %}<a href="mailto:{{ site.footer-links.email }}">{% include svg-icons/email.html %}</a>{% endif %}
-          {% if site.footer-links.facebook %}<a href="http://facebook.com/{{ site.footer-links.facebook }}">{% include svg-icons/facebook.html %}</a>{% endif %}
-          {% if site.footer-links.flickr %}<a href="http://flickr.com/{{ site.footer-links.flickr }}">{% include svg-icons/flickr.html %}</a>{% endif %}
-          {% if site.footer-links.github %}<a href="http://github.com/{{ site.footer-links.github }}">{% include svg-icons/github.html %}</a>{% endif %}
-          {% if site.footer-links.instagram %}<a href="http://instagram.com/{{ site.footer-links.instagram }}">{% include svg-icons/instagram.html %}</a>{% endif %}
-          {% if site.footer-links.linkedin %}<a href="http://linkedin.com/in/{{ site.footer-links.linkedin }}">{% include svg-icons/linkedin.html %}</a>{% endif %}
-          {% if site.footer-links.pinterest %}<a href="http://pinterest.com/{{ site.footer-links.pinterest }}">{% include svg-icons/pinterest.html %}</a>{% endif %}
-          {% if site.footer-links.rss %}<a href="{{ site.baseurl }}/feed.xml">{% include svg-icons/rss.html %}</a>{% endif %}
-          {% if site.footer-links.twitter %}<a href="http://twitter.com/{{ site.footer-links.twitter }}">{% include svg-icons/twitter.html %}</a>{% endif %}
-          {% if site.footer-links.stackoverflow %}<a href="http://stackoverflow.com/{{ site.footer-links.stackoverflow }}">{% include svg-icons/stackoverflow.html %}</a>{% endif %}
+          {% if site.footer-links.dribbble %}<a href="http://dribbble.com/{{ site.footer-links.dribbble }}"><img src="{{ site.baseurl }}/dribbble.svg"/></a>{% endif %}
+          {% if site.footer-links.email %}<a href="mailto:{{ site.footer-links.email }}"><img src="{{ site.baseurl }}/email.svg"/></a>{% endif %}
+          {% if site.footer-links.facebook %}<a href="http://facebook.com/{{ site.footer-links.facebook }}"><img src="{{ site.baseurl }}/facebook.svg"/></a>{% endif %}
+          {% if site.footer-links.flickr %}<a href="http://flickr.com/{{ site.footer-links.flickr }}"><img src="{{ site.baseurl }}/flickr.svg"/></a>{% endif %}
+          {% if site.footer-links.github %}<a href="http://github.com/{{ site.footer-links.github }}"><img src="{{ site.baseurl }}/github.svg"/></a>{% endif %}
+          {% if site.footer-links.instagram %}<a href="http://instagram.com/{{ site.footer-links.instagram }}"><img src="{{ site.baseurl }}/instagram.svg"/></a>{% endif %}
+          {% if site.footer-links.linkedin %}<a href="http://linkedin.com/in/{{ site.footer-links.linkedin }}"><img src="{{ site.baseurl }}/linkedin.svg"/></a>{% endif %}
+          {% if site.footer-links.pinterest %}<a href="http://pinterest.com/{{ site.footer-links.pinterest }}"><img src="{{ site.baseurl }}/pinterest.svg"/></a>{% endif %}
+          {% if site.footer-links.rss %}<a href="{{ site.baseurl }}/feed.xml"><img src="{{ site.baseurl }}/rss.svg"/></a>{% endif %}
+          {% if site.footer-links.twitter %}<a href="http://twitter.com/{{ site.footer-links.twitter }}"><img src="{{ site.baseurl }}/twitter.svg"/></a>{% endif %}
+          {% if site.footer-links.stackoverflow %}<a href="http://stackoverflow.com/{{ site.footer-links.stackoverflow }}"><img src="{{ site.baseurl }}/stackoverflow.svg"/></a>{% endif %}
