--- a/_includes/app_content.html
+++ b/_includes/app_content.html
@@ -1,10 +1,10 @@
 {% if post.installation %}
   <h2 id="installation">Installation</h2>
-  <p><b>Behold!</b> Third-party repositories are usually not verified by others. Follow these instructions at your own risk and only if you trust the owner of the repository / developer of the software.</p>
+  <p><b>Behold!</b> Third-party repositories are usually not verified by others. Follow these instructions only if you trust the owner of the repository and developer of the software. Opt for only one installation option if multiple are offered for your system. Use at your own risk!</p>
   {% for dist in post.installation %}
     <h3 id="installation-{{ dist.system }}">{{ dist.system }}</h3>
     {% for repo in dist.info %}
-      <p>Add a {{ dist.type }} repository for {{ dist.system }} version {{ repo.version }} to install the software.</p>
+      <p>Add a {{ dist.type }} repository for {{ dist.system }} version {{ repo.version }} to install the software, by entering the following commands in a terminal:</p>
       <pre><code>    sudo apt-add-repository {{ repo.repository }} && sudo apt-get update
     sudo apt-get install {{ repo.package }}</code></pre>
     {% endfor %}
