Remove Feedler, publish Footnote

--- a/_includes/loop.html
+++ b/_includes/loop.html
@@ -17,13 +17,14 @@
 
   <p>
     <div class="date">
+      <span class="octicon octicon-calendar"></span>
       {% if post.created != post.updated %}
         Published {{ post.created }}, last updated {{ post.updated }}
       {% else %}
         Published {{ post.created }}
       {% endif %}
     </div>
-    <a href="{{ site.baseurl }}{{ post.url }}">
+    <a style="font-weight:bold" href="{{ site.baseurl }}{{ post.url }}">
       Read more...
     </a>
   </p>
