--- a/_scss/_highlights.scss
+++ b/_scss/_highlights.scss
@@ -4,9 +4,10 @@
 /***********************/
 
 .highlight { 
-  background-color: $darkerGrey;
+  background-color: $base02;
+  color: $base2;
   padding: 5px 10px;
-  margin: 20px 0;
+  margin: 15px 0;
 }
 
 .highlight pre {
@@ -16,146 +17,145 @@
 }
  
 code {
-  font-family: 'Courier', monospace;
+  font-family: $font_code;
   font-size: 14px;
-  color: #999
 }
  
 // Solarized Light Pygments 
 // Thanks https://gist.github.com/edwardhotchkiss/2005058
 /* Comment */
-.highlight .c, .highlight .c1 { color: #586E75 }
+.highlight .c, .highlight .c1 { color: $base01 }
 /* Error */
-.highlight .err { color: #93A1A1 }
+.highlight .err { color: $base1 }
 /* Generic */
-.highlight .g { color: #93A1A1 }
+.highlight .g { color: $base1 }
 /* Keyword */
-.highlight .k { color: #859900 }
+.highlight .k { color: $green }
 /* Literal */
-.highlight .l { color: #93A1A1 }
+.highlight .l { color: $base1 }
 /* Name */
-.highlight .n { color: #93A1A1 }
+.highlight .n { color: $base1 }
 /* Operator */
-.highlight .o { color: #859900 }
+.highlight .o { color: $green }
 /* Other */
-.highlight .x { color: #CB4B16 }
+.highlight .x { color: $orange }
 /* Punctuation */
-.highlight .p { color: #93A1A1 }
+.highlight .p { color: $base1 }
 /* Comment.Multiline */
-.highlight .cm { color: #586E75 }
+.highlight .cm { color: $base01 }
 /* Comment.Preproc */
-.highlight .cp { color: #859900 }
+.highlight .cp { color: $green }
 /* Comment.Single */
-.highlight .c1 { color: #586E75 }
+.highlight .c1 { color: $base01 }
 /* Comment.Special */
-.highlight .cs { color: #859900 }
+.highlight .cs { color: $green }
 /* Generic.Deleted */
-.highlight .gd { color: #2AA198 }
+.highlight .gd { color: $cyan }
 /* Generic.Emph */
-.highlight .ge { color: #93A1A1; font-style: italic }
+.highlight .ge { color: $base1; font-style: italic }
 /* Generic.Error */
-.highlight .gr { color: #DC322F }
+.highlight .gr { color: $red }
 /* Generic.Heading */
-.highlight .gh { color: #CB4B16 }
+.highlight .gh { color: $orange }
 /* Generic.Inserted */
-.highlight .gi { color: #859900 }
+.highlight .gi { color: $green }
 /* Generic.Output */
-.highlight .go { color: #93A1A1 }
+.highlight .go { color: $base1 }
 /* Generic.Prompt */
-.highlight .gp { color: #93A1A1 }
+.highlight .gp { color: $base1 }
 /* Generic.Strong */
-.highlight .gs { color: #93A1A1; font-weight: bold }
+.highlight .gs { color: $base1; font-weight: bold }
 /* Generic.Subheading */
-.highlight .gu { color: #CB4B16 }
+.highlight .gu { color: $orange }
 /* Generic.Traceback */
-.highlight .gt { color: #93A1A1 }
+.highlight .gt { color: $base1 }
 /* Keyword.Constant */
-.highlight .kc { color: #CB4B16 }
+.highlight .kc { color: $orange }
 /* Keyword.Declaration */
-.highlight .kd { color: #268BD2 }
+.highlight .kd { color: $blue }
 /* Keyword.Namespace */
-.highlight .kn { color: #859900 }
+.highlight .kn { color: $green }
 /* Keyword.Pseudo */
-.highlight .kp { color: #859900 }
+.highlight .kp { color: $green }
 /* Keyword.Reserved */
-.highlight .kr { color: #268BD2 }
+.highlight .kr { color: $blue }
 /* Keyword.Type */
-.highlight .kt { color: #DC322F }
+.highlight .kt { color: $red }
 /* Literal.Date */
-.highlight .ld { color: #93A1A1 }
+.highlight .ld { color: $base1 }
 /* Literal.Number */
-.highlight .m { color: #2AA198 }
+.highlight .m { color: $cyan }
 /* Literal.String */
-.highlight .s { color: #2AA198 }
+.highlight .s { color: $cyan }
 /* Name.Attribute */
-.highlight .na { color: #93A1A1 }
+.highlight .na { color: $base1 }
 /* Name.Builtin */
-.highlight .nb { color: #B58900 }
+.highlight .nb { color: $yellow }
 /* Name.Class */
-.highlight .nc { color: #268BD2 }
+.highlight .nc { color: $blue }
 /* Name.Constant */
-.highlight .no { color: #CB4B16 }
+.highlight .no { color: $orange }
 /* Name.Decorator */
-.highlight .nd { color: #268BD2 }
+.highlight .nd { color: $blue }
 /* Name.Entity */
-.highlight .ni { color: #CB4B16 }
+.highlight .ni { color: $orange }
 /* Name.Exception */
-.highlight .ne { color: #CB4B16 }
+.highlight .ne { color: $orange }
 /* Name.Function */
-.highlight .nf { color: #268BD2 }
+.highlight .nf { color: $blue }
 /* Name.Label */
-.highlight .nl { color: #93A1A1 }
+.highlight .nl { color: $base1 }
 /* Name.Namespace */
-.highlight .nn { color: #93A1A1 }
+.highlight .nn { color: $base1 }
 /* Name.Other */
-.highlight .nx { color: #555 }
+.highlight .nx { color: $base01 } /*was #555*/
 /* Name.Property */
-.highlight .py { color: #93A1A1 }
+.highlight .py { color: $base1 }
 /* Name.Tag */
-.highlight .nt { color: #268BD2 }
+.highlight .nt { color: $blue }
 /* Name.Variable */
-.highlight .nv { color: #268BD2 }
+.highlight .nv { color: $blue }
 /* Operator.Word */
-.highlight .ow { color: #859900 }
+.highlight .ow { color: $green }
 /* Text.Whitespace */
-.highlight .w { color: #93A1A1 }
+.highlight .w { color: $base1 }
 /* Literal.Number.Float */
-.highlight .mf { color: #2AA198 }
+.highlight .mf { color: $cyan }
 /* Literal.Number.Hex */
-.highlight .mh { color: #2AA198 }
+.highlight .mh { color: $cyan }
 /* Literal.Number.Integer */
-.highlight .mi { color: #2AA198 }
+.highlight .mi { color: $cyan }
 /* Literal.Number.Oct */
-.highlight .mo { color: #2AA198 }
+.highlight .mo { color: $cyan }
 /* Literal.String.Backtick */
-.highlight .sb { color: #586E75 }
+.highlight .sb { color: $base01 }
 /* Literal.String.Char */
-.highlight .sc { color: #2AA198 }
+.highlight .sc { color: $cyan }
 /* Literal.String.Doc */
-.highlight .sd { color: #93A1A1 }
+.highlight .sd { color: $base1 }
 /* Literal.String.Double */
-.highlight .s2 { color: #2AA198 }
+.highlight .s2 { color: $cyan }
 /* Literal.String.Escape */
-.highlight .se { color: #CB4B16 }
+.highlight .se { color: $orange }
 /* Literal.String.Heredoc */
-.highlight .sh { color: #93A1A1 }
+.highlight .sh { color: $base1 }
 /* Literal.String.Interpol */
-.highlight .si { color: #2AA198 }
+.highlight .si { color: $cyan }
 /* Literal.String.Other */
-.highlight .sx { color: #2AA198 }
+.highlight .sx { color: $cyan }
 /* Literal.String.Regex */
-.highlight .sr { color: #DC322F }
+.highlight .sr { color: $red }
 /* Literal.String.Single */
-.highlight .s1 { color: #2AA198 }
+.highlight .s1 { color: $cyan }
 /* Literal.String.Symbol */
-.highlight .ss { color: #2AA198 }
+.highlight .ss { color: $cyan }
 /* Name.Builtin.Pseudo */
-.highlight .bp { color: #268BD2 }
+.highlight .bp { color: $blue }
 /* Name.Variable.Class */
-.highlight .vc { color: #268BD2 }
+.highlight .vc { color: $blue }
 /* Name.Variable.Global */
-.highlight .vg { color: #268BD2 }
+.highlight .vg { color: $blue }
 /* Name.Variable.Instance */
-.highlight .vi { color: #268BD2 }
+.highlight .vi { color: $blue }
 /* Literal.Number.Integer.Long */
-.highlight .il { color: #2AA198 }
+.highlight .il { color: $cyan }
