Fix build error, terminal styling

--- a/_includes/app_content.html
+++ b/_includes/app_content.html
@@ -5,8 +5,16 @@
     <h3 id="installation-{{ dist.system }}">{{ dist.system }}</h3>
     {% for repo in dist.info %}
       <p>Add a {{ dist.type }} repository for {{ dist.system }} version {{ repo.version }} to install the software, by entering the following commands in a terminal:</p>
-      <pre><code>    sudo apt-add-repository {{ repo.repository }} && sudo apt-get update
-    sudo apt-get install {{ repo.package }}</code></pre>
+      <div class="highlight">
+        <span class="mega-octicon octicon-terminal"></span>
+        <pre class="sh"><code>sudo apt-add-repository {{ repo.repository }} && sudo apt-get update
+sudo apt-get install {{ repo.package }}</code></pre>
+      </div>
+      <div style="display:flex;background:#073642;color:#fff;justify-content:left;align-items:center;">
+          <span class="mega-octicon octicon-terminal" style="margin:8px"></span>
+          <pre><code>sudo apt-add-repository {{ repo.repository }} && sudo apt-get update
+sudo apt-get install {{ repo.package }}</code></pre>
+      </div>
     {% endfor %}
   {% endfor %}
 {% endif %}
