--- a/_scss/_reset.scss
+++ b/_scss/_reset.scss
@@ -1,8 +1,4 @@
-
-/***************/
-/* MEYER RESET */
-/***************/
-
+// Meyer Reset
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
