--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -1,12 +1,12 @@
 // Solarize colors
 // http://ethanschoonover.com/solarized
 $base03:    #002b36;
-$base02:    #073642; $base02x: #30525C;
+$base02:    #073642; $base02x: #30525c;
 $base01:    #586e75;
 $base00:    #657b83;
 $base0:     #839496;
 $base1:     #93a1a1;
-$base2:     #eee8d5; $base2x: #C1C5BB;
+$base2:     #eee8d5; $base2x: #c1c5bb;
 $base3:     #fdf6e3;
 $yellow:    #b58900;
 $orange:    #cb4b16;
@@ -25,10 +25,18 @@ $grey: #666;
 $lightGrey: #eee;
 $white: #fff;
 
+// Theme colors
+$color_header: $base02x;
+
 $color_heading: $base02x;
+
 $color_body: $base02x;
+
 $color_link: $blue;
+
 $color_subtle: $base1;
+
+$color_borders: #ccc;
 
 // Fonts
 // Only with Latin subset for now
@@ -44,75 +52,75 @@ $font_heading: "Raleway", "Open Sans","Droid Sans", "Source Sans Pro", "Carlito"
 @import url(http://fonts.googleapis.com/css?family=Source+Code+Pro:400,700);
 $font_code: "Source Code Pro", "Droid Sans Mono", "Liberation Mono", "DejaVu Sans Mono", monospace;
 
-// Mobile breakpoints
-@mixin mobile {
-  @media screen and (max-width: 640px) {
-    @content;
-  }
-}
+// // Mobile breakpoints
+// @mixin mobile {
+  // @media screen and (max-width: 640px) {
+    // @content;
+  // }
+// }
 
-@mixin bp($dim) {
-  @if $dim = xl { @media screen and (min-width: 1601px)                         { @content; } }
-  @if $dim = l  { @media screen and (min-width: 1101px) and (max-width: 1600px) { @content; } }
-  @if $dim = m  { @media screen and (min-width:  721px) and (max-width: 1100px) { @content; } }
-  @if $dim = s  { @media screen and (min-width:  481px) and (max-width:  720px) { @content; } }
-  @if $dim = xs { @media screen and                         (max-width:  480px) { @content; } }
-}
+// @mixin bp($dim) {
+  // @if $dim = xl { @media screen and (min-width: 1601px)                         { @content; } }
+  // @if $dim = l  { @media screen and (min-width: 1101px) and (max-width: 1600px) { @content; } }
+  // @if $dim = m  { @media screen and (min-width:  721px) and (max-width: 1100px) { @content; } }
+  // @if $dim = s  { @media screen and (min-width:  481px) and (max-width:  720px) { @content; } }
+  // @if $dim = xs { @media screen and                         (max-width:  480px) { @content; } }
+// }
 
 
-/* XL */
-@media screen and (min-width:1601px) {
-    /* only not : xl l m s xs */
-    .not-xl,
-    .l:not(.xl),
-    .m:not(.xl),
-    .s:not(.xl),
-    .xs:not(.xl) {
-        display:none
-    }
-}
-/* L */
-@media screen and (min-width:1101px) and (max-width:1600px) {
-    /* only not : xl l m s xs */
-    .xl:not(.l),
-    .not-l,
-    .m:not(.l),
-    .s:not(.l),
-    .xs:not(.l) {
-        display:none
-    }
-}
-/* M */
-@media screen and (min-width:721px) and (max-width:1100px) {
-    /* only not : xl l m s xs */
-    .xl:not(.m),
-    .l:not(.m),
-    .not-m,
-    .s:not(.m),
-    .xs:not(.m) {
-        display:none
-    }
-}
-/* S */
-@media screen and (min-width:481px) and (max-width:720px) {
+// /* XL */
+// @media screen and (min-width:1601px) {
+    // /* only not : xl l m s xs */
+    // .not-xl,
+    // .l:not(.xl),
+    // .m:not(.xl),
+    // .s:not(.xl),
+    // .xs:not(.xl) {
+        // display:none
+    // }
+// }
+// /* L */
+// @media screen and (min-width:1101px) and (max-width:1600px) {
+    // /* only not : xl l m s xs */
+    // .xl:not(.l),
+    // .not-l,
+    // .m:not(.l),
+    // .s:not(.l),
+    // .xs:not(.l) {
+        // display:none
+    // }
+// }
+// /* M */
+// @media screen and (min-width:721px) and (max-width:1100px) {
+    // /* only not : xl l m s xs */
+    // .xl:not(.m),
+    // .l:not(.m),
+    // .not-m,
+    // .s:not(.m),
+    // .xs:not(.m) {
+        // display:none
+    // }
+// }
+// /* S */
+// @media screen and (min-width:481px) and (max-width:720px) {
 
-    /* only not : xl l m s xs */
-    .xl:not(.s),
-    .l:not(.s),
-    .m:not(.s),
-    .not-s,
-    .xs:not(.s) {
-        display:none
-    }
-}
-/* XS */
-@media screen and (max-width:480px) {
-    /* only not : xl l m s xs */
-    .xl:not(.xs),
-    .l:not(.xs),
-    .m:not(.xs),
-    .s:not(.xs),
-    .not-xs {
-        display:none
-    }
-}
+    // /* only not : xl l m s xs */
+    // .xl:not(.s),
+    // .l:not(.s),
+    // .m:not(.s),
+    // .not-s,
+    // .xs:not(.s) {
+        // display:none
+    // }
+// }
+// /* XS */
+// @media screen and (max-width:480px) {
+    // /* only not : xl l m s xs */
+    // .xl:not(.xs),
+    // .l:not(.xs),
+    // .m:not(.xs),
+    // .s:not(.xs),
+    // .not-xs {
+        // display:none
+    // }
+// }
