--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -52,12 +52,12 @@ $font_heading: "Raleway", "Open Sans","Droid Sans", "Source Sans Pro", "Carlito"
 @import url("http://fonts.googleapis.com/css?family=Source+Code+Pro:400,700");
 $font_code: "Source Code Pro", "Droid Sans Mono", "Liberation Mono", "DejaVu Sans Mono", monospace;
 
-// // Mobile breakpoints
-// @mixin mobile {
-  // @media screen and (max-width: 640px) {
-    // @content;
-  // }
-// }
+// Mobile breakpoints
+@mixin mobile {
+  @media screen and (max-width: 640px) {
+    @content;
+  }
+}
 
 // @mixin bp($dim) {
   // @if $dim = xl { @media screen and (min-width: 1601px)                         { @content; } }
@@ -67,60 +67,59 @@ $font_code: "Source Code Pro", "Droid Sans Mono", "Liberation Mono", "DejaVu San
   // @if $dim = xs { @media screen and                         (max-width:  480px) { @content; } }
 // }
 
+/* XL */
+@media screen and (min-width:1601px) {
+    /* only not : xl l m s xs */
+    .not-xl,
+    .l:not(.xl),
+    .m:not(.xl),
+    .s:not(.xl),
+    .xs:not(.xl) {
+        display:none
+    }
+}
+/* L */
+@media screen and (min-width:1101px) and (max-width:1600px) {
+    /* only not : xl l m s xs */
+    .xl:not(.l),
+    .not-l,
+    .m:not(.l),
+    .s:not(.l),
+    .xs:not(.l) {
+        display:none
+    }
+}
+/* M */
+@media screen and (min-width:721px) and (max-width:1100px) {
+    /* only not : xl l m s xs */
+    .xl:not(.m),
+    .l:not(.m),
+    .not-m,
+    .s:not(.m),
+    .xs:not(.m) {
+        display:none
+    }
+}
+/* S */
+@media screen and (min-width:481px) and (max-width:720px) {
 
-// /* XL */
-// @media screen and (min-width:1601px) {
-    // /* only not : xl l m s xs */
-    // .not-xl,
-    // .l:not(.xl),
-    // .m:not(.xl),
-    // .s:not(.xl),
-    // .xs:not(.xl) {
-        // display:none
-    // }
-// }
-// /* L */
-// @media screen and (min-width:1101px) and (max-width:1600px) {
-    // /* only not : xl l m s xs */
-    // .xl:not(.l),
-    // .not-l,
-    // .m:not(.l),
-    // .s:not(.l),
-    // .xs:not(.l) {
-        // display:none
-    // }
-// }
-// /* M */
-// @media screen and (min-width:721px) and (max-width:1100px) {
-    // /* only not : xl l m s xs */
-    // .xl:not(.m),
-    // .l:not(.m),
-    // .not-m,
-    // .s:not(.m),
-    // .xs:not(.m) {
-        // display:none
-    // }
-// }
-// /* S */
-// @media screen and (min-width:481px) and (max-width:720px) {
-
-    // /* only not : xl l m s xs */
-    // .xl:not(.s),
-    // .l:not(.s),
-    // .m:not(.s),
-    // .not-s,
-    // .xs:not(.s) {
-        // display:none
-    // }
-// }
-// /* XS */
-// @media screen and (max-width:480px) {
-    // /* only not : xl l m s xs */
-    // .xl:not(.xs),
-    // .l:not(.xs),
-    // .m:not(.xs),
-    // .s:not(.xs),
-    // .not-xs {
-        // display:none
-    // }
-// }
+    /* only not : xl l m s xs */
+    .xl:not(.s),
+    .l:not(.s),
+    .m:not(.s),
+    .not-s,
+    .xs:not(.s) {
+        display:none
+    }
+}
+/* XS */
+@media screen and (max-width:480px) {
+    /* only not : xl l m s xs */
+    .xl:not(.xs),
+    .l:not(.xs),
+    .m:not(.xs),
+    .s:not(.xs),
+    .not-xs {
+        display:none
+    }
+}
