Bunch of screenshots, little tweaks

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,7 @@
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/octicons/2.1.2/octicons.min.css" />
 
-    <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
-
-    <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
+    <link rel="alternate" type="application/rss+xml" title="{{ site.name }} – {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
     <!-- http://realfavicongenerator.net/ -->
     <link rel="apple-touch-icon" sizes="57x57" href="{{ site.baseurl }}/img/logo/apple-touch-icon-57x57.png">
