--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,6 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <!-- load jQuery and tablesorter scripts -->
-    <script type="text/javascript" src="script.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.18.4/js/jquery.tablesorter.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.18.4/js/jquery.tablesorter.widgets.min.js"></script>
@@ -19,6 +18,9 @@
       $(function(){
         $(".tablesorter").tablesorter();
       });
+      if (window.location.host == "quassy.github.io" && window.location.protocol != "https:") {
+        window.location.protocol = "https:";
+      }
     </script>
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
