--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     </title>
 
     <!--[if lt IE 9]>
-      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <!-- load jQuery and tablesorter scripts -->
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -18,8 +18,8 @@
       $(function(){
         $(".tablesorter").tablesorter();
       });
-      if (window.location.host == "quassy.github.io" && window.location.protocol != "https:") {
-        window.location.protocol = "https:";
+      if (window.location.protocol !== 'https:') {
+        window.location = 'https://' + window.location.hostname + window.location.pathname + window.location.hash;
       }
     </script>
 
