--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -40,16 +40,16 @@ $color_borders: #ccc;
 
 // Fonts
 // Only with Latin subset for now
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,700,700italic,400italic&subset=latin,latin-ext");
+@import url("//fonts.googleapis.com/css?family=Open+Sans:400,700,700italic,400italic&subset=latin,latin-ext");
 $font_body: "Open Sans","Droid Sans", "Source Sans Pro", "Carlito", "DejaVu Sans", sans-serif;
 $font_header: $font_body;
 
 // Needs some cleanup, not all weights are needed
-@import url("http://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900");
+@import url("//fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900");
 $font_heading: "Raleway", "Open Sans","Droid Sans", "Source Sans Pro", "Carlito", "DejaVu Sans", sans-serif;
 
 // Some day there will be Open Sans Mono 
-@import url("http://fonts.googleapis.com/css?family=Source+Code+Pro:400,700");
+@import url("//fonts.googleapis.com/css?family=Source+Code+Pro:400,700");
 $font_code: "Source Code Pro", "Droid Sans Mono", "Liberation Mono", "DejaVu Sans Mono", monospace;
 
 // Mobile breakpoints
