--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,8 +8,8 @@ layout: default
 
   <header>
 
-    <h1 id="{{ post.title }}">{{ post.title }}</h1>
-    {% if post.generic and title_obvious != true %}<p>{{ post.generic }}</p>{% endif %}
+    <h1 id="{{ post.title }}">{% if page.title %}{{ page.title }}{% else %}{{ page.name }}{% endif %}</h1>
+    {% if post.generic and post.title_obvious != true %}<p>{{ post.generic }}</p>{% endif %}
 
   </header>
 
