--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
 
   <header>
 
-    <h1 id="{{ post.title }}">{% if page.title %}{{ page.title }}{% else %}{{ page.name }}{% endif %}</h1>
+    <h1 id="{{ post.title }}">{% if page.title %}{{ page.title }}{% else %}{{ page.name | remove: ".md" }}{% endif %}</h1>
     {% if post.generic and post.title_obvious != true %}<p>{{ post.generic }}</p>{% endif %}
 
   </header>
