--- a/_includes/loop.html
+++ b/_includes/loop.html
@@ -2,7 +2,7 @@
 
   <header>
     <a href="{{ site.baseurl }}{{ post.url }}">
-      <h1 id="{{ post.title }}">{% if page.title %}{{ page.title }}{% else %}{{ page.name | remove: ".md" }}{% endif %}</h1>
+      <h1 id="{{ post.title }}">{% if post.title %}{{ post.title }}{% else %}{{ post.name | remove: ".md" }}{% endif %}</h1>
     {% if post.generic %}<p>{{ post.generic }}</p>{% endif %}
     </a>
   </header>      
