--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,17 +1,20 @@
 {% if site.disqus %}
 <div class="comments">
-	<div id="disqus_thread"></div>
-	<script type="text/javascript">
-    
-	    var disqus_shortname = '{{ site.disqus }}'; 
 
-	    (function() {
-	        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-	        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-	        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-	    })();
+  <div id="disqus_thread"></div>
+  <div id="disqus_loader">
+    <a onclick='
+      jQuery.ajaxSetup({cache:true});
+      jQuery.getScript("http://{{ site.disqus }}.disqus.com/embed.js");
+      jQuery.ajaxSetup({cache:false});
+      jQuery("#disqus_loader").remove();
+    '>
+    Click to view comments and add your own! Powered by Disqus.
+    </a>
+  </div>
+	<noscript>
+    Enable JavaScript if you want to view the comments! <a href="http://disqus.com/?ref_noscript">Powered by Disqus.</a>
+  </noscript>
 
-	</script>
-	<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </div>
 {% endif %}
