--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -5,7 +5,7 @@
   <div id="disqus_loader">
     <a onclick='
       jQuery.ajaxSetup({cache:true});
-      jQuery.getScript("http://{{ site.disqus }}.disqus.com/embed.js");
+      jQuery.getScript("//{{ site.disqus }}.disqus.com/embed.js");
       jQuery.ajaxSetup({cache:false});
       jQuery("#disqus_loader").remove();
     '>
@@ -13,7 +13,7 @@
     </a>
   </div>
 	<noscript>
-    Enable JavaScript if you want to view the comments! <a href="http://disqus.com/?ref_noscript">Powered by Disqus.</a>
+    Enable JavaScript if you want to view the comments! <a href="https://disqus.com/?ref_noscript">Powered by Disqus.</a>
   </noscript>
 
 </div>
