Fix page title, deactivate Piwik for now

--- a/_includes/analytics-piwik.html
+++ b/_includes/analytics-piwik.html
@@ -1,4 +1,4 @@
-{% if site.piwik_analytics %}
+{% if site.piwik_analytics == 'piwik deactivated' %}
     <!-- Piwik -->
     <script type="text/javascript">
       var _paq = _paq || [];
