--- a/_includes/analytics-piwik.html
+++ b/_includes/analytics-piwik.html
@@ -1,17 +1,17 @@
-{% if site.piwik_analytics == 'piwik deactivated' %}
+{% if site.piwik_analytics %}
     <!-- Piwik -->
     <script type="text/javascript">
       var _paq = _paq || [];
       _paq.push(['trackPageView']);
       _paq.push(['enableLinkTracking']);
       (function() {
-        var u="//tools.qulp.net/piwik/";
+        var u="//quassy.rasalhague.uberspace.de/piwik/";
         _paq.push(['setTrackerUrl', u+'piwik.php']);
         _paq.push(['setSiteId', 13]);
         var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
         g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
       })();
     </script>
-    <noscript><p><img src="//tools.qulp.net/piwik/piwik.php?idsite=13" style="border:0;" alt="" /></p></noscript>
+    <noscript><p><img src="//quassy.rasalhague.uberspace.de/piwik/piwik.php?idsite=13" style="border:0;" alt="" /></p></noscript>
     <!-- End Piwik Code -->
 {% endif %}
