--- a/_includes/loop.html
+++ b/_includes/loop.html
@@ -1,11 +1,11 @@
-<article class="post">    
+<article class="post">
 
   <header>
     <a href="{{ site.baseurl }}{{ post.url }}">
       <h1 id="{{ post.title }}">{% if post.title %}{{ post.title }}{% else %}{{ post.name | remove: ".md" }}{% endif %}</h1>
-    {% if post.generic %}<p>{{ post.generic }}</p>{% endif %}
+      {% if post.generic and post.title_obvious != true %}<p>{{ post.generic }}</p>{% endif %}
     </a>
-  </header>      
+  </header>
 
   <div class="entry">
     {% if post.layout == 'app' %}
