--- a/_includes/loop.html
+++ b/_includes/loop.html
@@ -2,7 +2,7 @@
 
   <header>
     <a href="{{ site.baseurl }}{{ post.url }}">
-      <h1 id="{{ post.title }}">{% if post.title %}{{ post.title }}{% else %}{{ post.name | remove: ".md" }}{% endif %}</h1>
+      <h1 id="{% if post.title %}{{ post.title }}{% else %}{{ post.name | remove: ".md" }}{% endif %}">{% if post.title %}{{ post.title }}{% else %}{{ post.name | remove: ".md" }}{% endif %}</h1>
       {% if post.generic and post.title_obvious != true %}<p>{{ post.generic }}</p>{% endif %}
     </a>
   </header>
