--- a/_includes/app_teaser.html
+++ b/_includes/app_teaser.html
@@ -1,7 +1,10 @@
 {% if post.screenshots %}
   <div id="screenshots">
     {% for screenshot in post.screenshots %}
-      <img src="{{ site.baseurl }}/img/windows/{{ screenshot }}" alt="Screenshot of {{ post.title }}" />
+      <img src="{ site.baseurl }}/img/windows/placeholder.png" data-src="{{ site.baseurl }}/img/windows/{{ screenshot }}" alt="Screenshot of {{ post.title }}" />
+      <noscript>
+        <img src="{{ site.baseurl }}/img/windows/{{ screenshot }}" alt="Screenshot of {{ post.title }}" />
+      </noscript>
     {% endfor %}
   </div>
   <p id="showcase" style="text-align:center">
