--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,13 @@
   <![endif]-->
   <!-- load jQuery and tablesorter scripts -->
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/unveil/1.3.0/jquery.unveil.min.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.18.4/js/jquery.tablesorter.min.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.18.4/js/jquery.tablesorter.widgets.min.js"></script>
   <script type="text/javascript">
+    $(document).ready(function() {
+      $("img").unveil();
+    });
     $(function(){
       $(".tablesorter").tablesorter();
     });
