--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,17 +15,6 @@
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/unveil/1.3.0/jquery.unveil.min.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.18.4/js/jquery.tablesorter.min.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.18.4/js/jquery.tablesorter.widgets.min.js"></script>
-  <script type="text/javascript">
-    $(document).ready(function() {
-      $("img").unveil();
-    });
-    $(function(){
-      $(".tablesorter").tablesorter();
-    });
-    if (window.location.protocol !== 'https:') {
-      window.location = 'https://' + window.location.hostname + window.location.pathname + window.location.hash;
-    }
-  </script>
 
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
   <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/octicons/2.1.2/octicons.min.css" />
@@ -93,5 +82,7 @@
 
   {% include analytics.html %}
   {% include analytics-piwik.html %}
+  <script type="text/javascript" src="{{ site.baseurl }}/script.js"></script>  
+
 </body>
 </html>
