Add link to manifest.json for PWA

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,8 @@
   <meta name="msapplication-config" content="{{ site.baseurl }}/img/logo/browserconfig.xml">
   <meta name="application-name" content="elementary apps">
 
+  <link rel="manifest" href="{{ site.baseurl }}/manifest.json" />
+  
 </head>
 
 <body>
