Correct URL of service worker

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,7 +87,7 @@
   <script type="text/javascript" src="{{ site.baseurl }}/script.js"></script>  
   <script>
     if('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('sw.js');
+      navigator.serviceWorker.register('{{ site.baseurl }}/sw.js');
     };
   </script> 
  
