Update CSP for Piwik

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,7 +1,7 @@
     <meta charset="utf-8" />
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"  />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://cdnjs.cloudflare.com https://fonts.googleapis.com https://disqus.com https://*.disqus.com https://*.disquscdn.com https://quassy.rasalhague.uberspace.de https://*.youtube.com;" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://cdnjs.cloudflare.com https://fonts.googleapis.com https://disqus.com https://*.disqus.com https://*.disquscdn.com https://quassy.rasalhague.uberspace.de https://qxy.uber.space https://*.youtube.com;" />
     <meta http-equiv="X-Content-Type-Options" content="nosniff" />
     <meta http-equiv="X-Frame-Options" content="DENY" />
     <meta http-equiv="X-XSS-Protection" content="1; mode=block" />
